deploy/k8s/minerva-api-ingress.yml
---
# Prefix stripping middleware
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-ingress-middleware
  namespace: minerva
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /api
---
# API Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: minerva
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: minerva-api-ingress-middleware@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: rest-svc
                port:
                  number: 9000
